# kroneum

./: .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  travis.yml
hw/enclosure/: README.md
sw/cli/: Cargo.toml  build.rs
sw/cli/src/: device.rs  device_hidapi.rs  device_libusb.rs  main.rs  ui.rs
sw/cli/src/device/: device.rs  device_identifier.rs  mod.rs
sw/cli/src/ui/: mod.rs  server.rs
sw/cli/src/ui/static/: .eslintrc.js  package.json  tsconfig.json
sw/firmware/: Cargo.toml  README.md  openocd.cfg  openocd.gdb
sw/firmware/.cargo/: config
sw/firmware/api/: Cargo.toml
sw/firmware/api/src/: adc.rs  array.rs  beeper.rs  buttons.rs  config.rs  lib.rs  radio.rs  rtc.rs  system.rs  system_control.rs  systick.rs  time.rs  timer.rs
sw/firmware/api/src/beeper/: melody.rs  note.rs  tone.rs
sw/firmware/api/src/flash/: mod.rs  storage.rs  storage_page.rs  storage_page_status.rs  storage_slot.rs
sw/firmware/api/src/radio/: commands.rs  constants.rs  errors.rs  pipes.rs  registers.rs
sw/firmware/api/src/system/: system_hardware.rs  system_info.rs  system_mode.rs  system_role.rs  system_state.rs
sw/firmware/api/src/usb/: command_error.rs  command_packet.rs  commands.rs  descriptors.rs  endpoint.rs  mod.rs  packet_queue.rs  pma.rs  setup_packet.rs  usb_error.rs
sw/firmware/scripts/: flash.sh
sw/firmware/stm32f0x2/: Cargo.toml  STM32F0x2.svd  build.rs  device.x
sw/firmware/stm32f0x2/src/: adc.rs  can.rs  cec.rs  crc.rs  crs.rs  dac.rs  dbgmcu.rs  exti.rs  lib.rs  rcc.rs  rtc.rs  stk.rs  syscfg_comp.rs  tim1.rs  tim14.rs  tsc.rs  usb.rs
sw/firmware/stm32f0x2/src/adc/: ccr.rs  cfgr1.rs  cfgr2.rs  chselr.rs  cr.rs  dr.rs  ier.rs  isr.rs  smpr.rs  tr.rs
sw/firmware/stm32f0x2/src/can/: can_btr.rs  can_esr.rs  can_fa1r.rs  can_ffa1r.rs  can_fm1r.rs  can_fmr.rs  can_fs1r.rs  can_ier.rs  can_mcr.rs  can_msr.rs  can_rdh0r.rs  can_rdh1r.rs  can_rdl0r.rs  can_rdl1r.rs  can_rdt0r.rs  can_rdt1r.rs  can_rf0r.rs  can_rf1r.rs  can_ri0r.rs  can_ri1r.rs  can_tdh0r.rs  can_tdh1r.rs  can_tdh2r.rs  can_tdl0r.rs  can_tdl1r.rs  can_tdl2r.rs  can_tdt0r.rs  can_tdt1r.rs  can_tdt2r.rs  can_ti0r.rs  can_ti1r.rs  can_ti2r.rs  can_tsr.rs
sw/firmware/stm32f0x2/src/cec/: cfgr.rs  cr.rs  ier.rs  isr.rs  rxdr.rs  txdr.rs
sw/firmware/stm32f0x2/src/crs/: cfgr.rs  cr.rs  icr.rs  isr.rs
sw/firmware/stm32f0x2/src/dac/: cr.rs  dhr12ld.rs  dhr12rd.rs  swtrigr.rs
sw/firmware/stm32f0x2/src/dbgmcu/: apb1_fz.rs  apb2_fz.rs  cr.rs  idcode.rs
sw/firmware/stm32f0x2/src/exti/: emr.rs  ftsr.rs  imr.rs  pr.rs  rtsr.rs  swier.rs
sw/firmware/stm32f0x2/src/flash/: obr.rs
sw/firmware/stm32f0x2/src/gpioa/: lckr.rs  moder.rs  pupdr.rs
sw/firmware/stm32f0x2/src/gpiof/: bsrr.rs  lckr.rs  moder.rs
sw/firmware/stm32f0x2/src/i2c1/: cr2.rs  txdr.rs
sw/firmware/stm32f0x2/src/pwr/: cr.rs  csr.rs
sw/firmware/stm32f0x2/src/rcc/: ahbenr.rs  ahbrstr.rs  apb1enr.rs  apb1rstr.rs  apb2enr.rs  apb2rstr.rs  cfgr.rs  cfgr2.rs  cfgr3.rs  cir.rs  cr2.rs
sw/firmware/stm32f0x2/src/rtc/: alrmar.rs  cr.rs  isr.rs  tafcr.rs  tstr.rs
(+236 files in other folders)
