[package]
name = "kroneum-cli"
version = "0.1.0"
authors = ["Aleh Zasypkin <aleh.zasypkin@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-web = "2.0.0"
clap = "2.33.0"
hidapi = "1.2.1"
humantime = "2.0.0"
kroneum-api = { path="../firmware/api" }
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.48"