cargo-features = ["profile-overrides"]

[workspace]
members = [
    "api",
    "bin",
]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"

# [profile.release.overrides.stm32f0]
# opt-level = "z"

[profile.dev]
lto = true
incremental = false
opt-level = 1